--- a/app/GuardianAngel/app/src/main/res/values/strings.xml
+++ b/app/GuardianAngel/app/src/main/res/values/strings.xml
@@ -66,4 +66,6 @@
     <string name="save">Save</string>
     <string name="profile">Profile</string>
     <string name="about">About you</string>
+    <string name="dashboard">Dashboard</string>
+    <string name="suggestion">Suggestions for you</string>
 </resources>
