Android - Initial commit
Signed-off-by: Ashwin Elangovan <ashelangovan@gmail.com>

--- a/app/GuardianAngel/app/src/main/res/values/strings.xml
+++ b/app/GuardianAngel/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="username">Username</string>
     <string name="text_label_1">Home</string>
     <string name="text_label_2">User Details</string>
+    <string name="select_wakeup_preference">Select Wakeup Preference</string>
 </resources>
