--- a/app/GuardianAngel/app/src/main/res/values/strings.xml
+++ b/app/GuardianAngel/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="text_label_1">Home</string>
     <string name="text_label_2">User Details</string>
     <string name="days_until_period">"%s \n Next Period: %s"</string>
+    <string name="cancel">"Close"</string>
+    <string name="supporting_text">"%s"</string>
+    <string name="title">"Today's Fact"</string>
 
 </resources>
