--- a/app/GuardianAngel/app/src/main/res/values/strings.xml
+++ b/app/GuardianAngel/app/src/main/res/values/strings.xml
@@ -16,42 +16,7 @@
     <string name="cancel">"Close"</string>
     <string name="supporting_text">"%s"</string>
     <string name="title">"Today's Fact"</string>
-    <string name="lorem_ipsum">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
-        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
-        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
-        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
-        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
-        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
-        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
-        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
-        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
-        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
-        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
-        bibendum, vel congue leo egestas.\n\n
-        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
-        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
-        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
-        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
-        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
-        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
-        est.\n\n
-        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
-        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
-        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
-        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
-        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
-        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
-        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
-        convallis.\n\n
-        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
-        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
-        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
-        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
-        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
-        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
-        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
-    </string>
+
     <string name="inbox_title">asca</string>
     <string name="outbox_title">asdasd</string>
     <string name="favouriates_title">sdasd</string>
@@ -177,4 +142,10 @@
     <string name="step">Step Count</string>
     <string name="medicaldata">Medical Data</string>
     <string name="help">Help and Feedback</string>
+    <string name="dietsuggest">Suggestions for you</string>
+    <string name="currentloc">Current Location</string>
+    <string name="noloc">No location found</string>
+    <string name="segtitletext1">Food you can order according to your diet</string>
+    <string name="segtitletext2">Food you should avoid</string>
+    <string name="sleep_content">Everybody needs a different amount of sleep. To understand how much you need, start by making a note of how you feel each day. If you feel relaxed and energized, you\'ve likely had a good night\'s rest. If you haven\'t slept enough, you might feel tired and irritable. In addition, keep an eye on your sleep duration. It may sound obvious, but a quick daily check–in can help you spot patterns.\\n\\n\n        What the Science Says:\\n\\n\n        Studies show that most adults feel their best when they get between 7–9 hours of sleep per night. However, individual needs can vary. Guardian Angel, with its comprehensive sleep tracking features, becomes your personalized sleep assistant. By syncing with your wearable devices or manually inputting your sleep data, Guardian Angel provides a holistic view of your sleep patterns over time.\\n\\nTrack Your Sleep:\\n\\n\n\n    Guardian Angel allows you to effortlessly track your sleep duration and quality. The app logs the time you spend in different sleep stages, helping you understand your sleep cycles. Regular check-ins with the app enable you to correlate your sleep data with daily activities and moods, giving you actionable insights into your well-being.\\n\\n\n\n    Set Sleep Goals:\\n\\n\n\n    Based on your individual needs and preferences, Guardian Angel lets you set personalized sleep goals. Whether you aim for a consistent 8 hours or want to gradually improve your sleep duration, the app helps you stay accountable. Receive gentle reminders and insights tailored to your sleep patterns, nudging you toward better sleep hygiene.\\n\\n\n\n    Integration with Daily Feelings:\\n\\n\n\n    Combine your sleep data with the daily check-ins on how you feel using Guardian Angel. The app utilizes this holistic approach to provide recommendations for optimizing your sleep routine. If you\'ve had a particularly stressful day, Guardian Angel might suggest winding down activities to enhance your sleep quality.\\n\\n\n\n    Health Insights:\\n\\n\n\n    Beyond sleep, Guardian Angel offers a range of health insights. It aggregates data on your physical activity, nutrition, and mindfulness, creating a comprehensive profile of your well-being. By understanding the interplay between these factors, you gain a holistic perspective on your health, empowering you to make informed lifestyle choices.\\n\\n\n\n    In conclusion, Guardian Angel is not just a fitness tracker; it\'s your partner in holistic well-being. By integrating sleep tracking with other health metrics, the app enables you to embark on a journey of self-discovery, making positive changes for a healthier and more energized life.</string>
 </resources>
