Period Tracker UI update

--- a/app/GuardianAngel/app/src/main/res/values/strings.xml
+++ b/app/GuardianAngel/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="blood">Blood Group</string>
     <string name="save">Save</string>
     <string name="profile">Profile</string>
+    <string name="cycledetails">Cycle Tracking</string>
     <string name="about">About you</string>
     <string name="dashboard">Dashboard</string>
     <string name="suggestion">Suggestions for you</string>
